# zero2prod-axum-examples

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/handlers/: health_check.rs
tests/: health_check.rs
